--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,9 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - ./:/root/notebooks
+      - ./notebooks:/root/notebooks
+    devices:
+      - "/dev/video0:/dev/video0"
     environment:
       - GRANT_SUDO=yes
     user: root
